1.2.9b
[Fix]
- hash:true incompatible with vertical offset

1.2.8
[Fix]
- The setting 'stop' wasn't working on window.

1.2.7
[Feature]
- The set of settings can be accessed from within the onBefore as 'this'.
- The hash is set before scrolling, so the back button works (when scrolling the window).
- The option hash doesn't make the window jump when scrolling overflown elements (making it usable).
- $.localScroll.hash now resets the element by default
[Enhancement]
- Various enhancements, updated to take advantage of scrollTo +1.4.x
[Change]
- The element that triggered the scroll cannot be accessed anymore (useless).
- settings.persistent is no longer supported (was deprecated)

1.2.6
[Enhancement]
- areas(from image maps) are now formally supported, it was possible before by setting 'lazy' to true.
[Fix]
- When hash:true, a queue problem could arise.

1.2.5
[Feature]
- LocalScroll can now be safely combined with SerialScroll(1.2.0 or higher).

1.2.4
[Feature]
- If onBefore returns false, the event is ignored.
- Relicensed from GPL to GPL+MIT.

1.2.3
[Fix]
- Added an extra check for an odd behavior of Firefox that it throws an error when checking the 'hash' attribute of a named anchor.

1.2.2
[Optimizations]
* Small improvements to make the code shorter.
* Made the code to set the hash in the url, cleaner.
[Features]
* Added the option 'lock', if true, the plugin will ignore events if already animating.

1.2.1
[Changes]
* Renamed the option 'persistent' to 'lazy', I didn't like the name. Using persistent will still work (backwards compatibilty)

1.2
[Optimizations]
* Replaced a $('[name='+id+']') for a document.getElementsByName(id) to improve perfomance.
[Fixes]
* Now the last argument received by onBefore when scrolling the window, is no more $(window) but the real element being scrolled.
[Features]
* Added the option 'stop', if true (default), each click will stop any previous animations of the target.