@@ -1,6 +1,8 @@
 1.2.9b
 [Fix]
 - hash:true incompatible with vertical offset
+[Enhancement]
+- $.localScroll.hash() is not needed anymore
 
 1.2.8
 [Fix]
